--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Embedded Style Sheet</title>
+<link rel="stylesheet.css" type="type/css" href="https://github.com/nawna22/home-run-record/blob/master/style.css">
  </head>
  <body>
 
